--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
     </developers>
 
     <scm>
-        <connection>scm:git:dbs-leipzig@github.com/dbs-leipzig/gradoop.git</connection>
-        <developerConnection>scm:dbs-leipzig@github.com/dbs-leipzig/gradoop.git</developerConnection>
         <url>http://github.com/dbs-leipzig/gradoop.git</url>
+        <connection>scm:git:git@github.com:dbs-leipzig/gradoop.git</connection>
+        <developerConnection>scm:git:dbs-leipzig@github.com/dbs-leipzig/gradoop.git</developerConnection>
     </scm>
 
     <distributionManagement>
@@ -92,7 +92,7 @@
         <project.build.targetJdk>1.8</project.build.targetJdk>
 
         <dep.flink.version>1.1.2</dep.flink.version>
-        <dep.gdl.version>0.2-SNAPSHOT</dep.gdl.version>
+        <dep.gdl.version>0.3.0-SNAPSHOT</dep.gdl.version>
         <dep.hbase.version>0.98.11-hadoop2</dep.hbase.version>
         <dep.junit.version>4.11</dep.junit.version>
         <dep.jettison.version>1.3.7</dep.jettison.version>
@@ -105,6 +105,7 @@
         <plugin.maven-checkstyle.version>2.14</plugin.maven-checkstyle.version>
         <plugin.maven-findbugs.version>3.0.1</plugin.maven-findbugs.version>
         <plugin.maven-jar.version>2.3.2</plugin.maven-jar.version>
+        <plugin.maven-release.version>2.5.3</plugin.maven-release.version>
         <plugin.maven-surefire.version>2.19.1</plugin.maven-surefire.version>
         <plugin.maven-shade.version>2.4.3</plugin.maven-shade.version>
     </properties>
@@ -215,6 +216,16 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
                     <version>${plugin.maven-shade.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${plugin.maven-release.version}</version>
+                    <configuration>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                        <pushChanges>false</pushChanges>
+                        <tagNameFormat>v@{project.version}</tagNameFormat>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
