--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
         <project.build.targetJdk>1.8</project.build.targetJdk>
 
         <dep.flink.version>1.1.2</dep.flink.version>
-        <dep.gdl.version>0.3.0-SNAPSHOT</dep.gdl.version>
+        <dep.gdl.version>0.2.0</dep.gdl.version>
         <dep.hbase.version>0.98.11-hadoop2</dep.hbase.version>
         <dep.junit.version>4.11</dep.junit.version>
         <dep.jettison.version>1.3.7</dep.jettison.version>
@@ -250,12 +250,6 @@
 
             <dependency>
                 <groupId>org.gradoop</groupId>
-                <artifactId>gradoop-datagen</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.gradoop</groupId>
                 <artifactId>gradoop-examples</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -328,14 +322,6 @@
             <dependency>
                 <groupId>org.gradoop</groupId>
                 <artifactId>gradoop-flink</artifactId>
-                <version>${project.version}</version>
-                <type>test-jar</type>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.gradoop</groupId>
-                <artifactId>gradoop-datagen</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
