[#382] updated traverser benchmark
* run fixed and dynamic queries
* expects prepared graph files (vertex ids, edge triples)
* fixes #382

--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -46,7 +46,7 @@
                                 <includes>
                                     <!-- libs that are not provided by flink binary -->
                                     <include>org.apache.hbase:hbase-common</include>
-                                    <include>org.apache.flink:flink-gelly</include>
+                                    <include>org.apache.flink:flink-gelly_2.11</include>
                                     <include>org.gradoop:*</include>
                                     <include>org.s1ck:gdl</include>
                                     <include>org.codehaus.jettison:jettison</include>
