--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -42,6 +42,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <minimizeJar>true</minimizeJar>
                             <artifactSet>
                                 <includes>
                                     <!-- libs that are not provided by flink binary -->
@@ -52,6 +53,7 @@
                                     <include>org.codehaus.jettison:jettison</include>
                                     <include>com.google.guava:guava</include>
                                     <include>org.antlr:antlr4-runtime</include>
+                                    <include>org.mongodb:mongo-java-driver</include>
                                     <include>commons-cli:*</include>
                                 </includes>
                             </artifactSet>
