--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
         <dep.flink.version>1.1.2</dep.flink.version>
         <dep.gdl.version>0.3.0-SNAPSHOT</dep.gdl.version>
         <dep.hbase.version>0.98.11-hadoop2</dep.hbase.version>
+        <dep.javafastpfor.version>0.1.10</dep.javafastpfor.version>
         <dep.junit.version>4.11</dep.junit.version>
         <dep.jettison.version>1.3.7</dep.jettison.version>
         <dep.jsonassert.version>1.2.3</dep.jsonassert.version>
@@ -296,6 +297,12 @@
                 <groupId>org.s1ck</groupId>
                 <artifactId>gdl</artifactId>
                 <version>${dep.gdl.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>me.lemire.integercompression</groupId>
+                <artifactId>JavaFastPFOR</artifactId>
+                <version>${dep.javafastpfor.version}</version>
             </dependency>
 
             <dependency>
