--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -55,6 +55,7 @@
                                     <include>org.antlr:antlr4-runtime</include>
                                     <include>org.mongodb:mongo-java-driver</include>
                                     <include>commons-cli:*</include>
+                                    <include>me.lemire.integercompression:*</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
