Checkstyle 2.16 needs explicit configuration to fail on violations

--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,8 @@
                         <includeTestResources>false</includeTestResources>
                         <suppressionsLocation>gradoop/checkstyle-suppressions.xml</suppressionsLocation>
                         <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
+                        <failsOnError>true</failsOnError>
+                        <consoleOutput>true</consoleOutput>
                     </configuration>
                     <executions>
                         <execution>
