[#524] updated flink and hbase to version 1.3.1  - added flink-hadoop and hbase-hadoop compatibility dependencies  - updated GradoopFlinkTestBase  - removed FlinkHBaseTestBase  - added TestSuite for gradoop-hbase tests  - added Ignore annotation to GraphStatisticsHDFSReaderTest  - added header to tests

--- a/gradoop-hbase/pom.xml
+++ b/gradoop-hbase/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>hbase-server</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-hadoop-compatibility</artifactId>
+        </dependency>
+
         <!-- Flink -->
         <dependency>
             <groupId>org.apache.flink</groupId>
