--- a/gradoop-flink/pom.xml
+++ b/gradoop-flink/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>JavaFastPFOR</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-hadoop-compatibility_2.11</artifactId>
+        </dependency>
+
         <!-- Test dependencies -->
 
         <!-- Gradoop -->
