--- a/gradoop-hbase/pom.xml
+++ b/gradoop-hbase/pom.xml
@@ -57,7 +57,7 @@
 
         <dependency>
             <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-hadoop-compatibility</artifactId>
+            <artifactId>hbase-hadoop-compat</artifactId>
         </dependency>
 
         <!-- Flink -->
