--- a/pom.xml
+++ b/pom.xml
@@ -346,7 +346,7 @@
             <!-- required to update to hbase 1.3.1 -->
             <dependency>
                 <groupId>org.apache.hbase</groupId>
-                <artifactId>hbase-hadoop-compatibility</artifactId>
+                <artifactId>hbase-hadoop-compat</artifactId>
                 <version>${dep.hbase.version}</version>
             </dependency>
 
