[#524] updated flink and hbase to version 1.3.1 - force maven to run HBaseTestSuite in gradoop-maven module

--- a/gradoop-hbase/pom.xml
+++ b/gradoop-hbase/pom.xml
@@ -24,6 +24,15 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        **/HBaseTestSuite.class
+                    </includes>
+                </configuration>
+            </plugin>
             <!-- Creates an extra *-tests.jar which can be used as dependency -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
