--- a/gradoop-hbase/pom.xml
+++ b/gradoop-hbase/pom.xml
@@ -14,6 +14,10 @@
     <name>Gradoop HBase</name>
 	<description>Read/write graphs from/to HBase</description>
 
+    <properties>
+        <hbaseSuite>**/HBaseTestSuite.class</hbaseSuite>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -23,6 +27,15 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>${hbaseSuite}</include>
+                    </includes>
+                </configuration>
             </plugin>
             <!-- Creates an extra *-tests.jar which can be used as dependency -->
             <plugin>
@@ -53,6 +66,11 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-hadoop-compat</artifactId>
         </dependency>
 
         <!-- Flink -->
