--- a/pom.xml
+++ b/pom.xml
@@ -104,9 +104,9 @@
 
         <license.licenseName>apache_v2</license.licenseName>
 
-        <dep.flink.version>1.1.2</dep.flink.version>
+        <dep.flink.version>1.3.1</dep.flink.version>
         <dep.gdl.version>0.3.0-SNAPSHOT</dep.gdl.version>
-        <dep.hbase.version>0.98.11-hadoop2</dep.hbase.version>
+        <dep.hbase.version>1.3.1</dep.hbase.version>
         <dep.javafastpfor.version>0.1.10</dep.javafastpfor.version>
         <dep.junit.version>4.11</dep.junit.version>
         <dep.jettison.version>1.3.7</dep.jettison.version>
@@ -328,10 +328,23 @@
                 <version>${dep.flink.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-hadoop-compatibility_2.11</artifactId>
+                <version>${dep.flink.version}</version>
+            </dependency>
+
+
             <!-- HBase -->
             <dependency>
                 <groupId>org.apache.hbase</groupId>
                 <artifactId>hbase-server</artifactId>
+                <version>${dep.hbase.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.hbase</groupId>
+                <artifactId>hbase-hadoop-compat</artifactId>
                 <version>${dep.hbase.version}</version>
             </dependency>
 
