[#636] Remove redundant classes

--- a/gradoop-hbase/pom.xml
+++ b/gradoop-hbase/pom.xml
@@ -99,6 +99,13 @@
 
         <dependency>
             <groupId>org.gradoop</groupId>
+            <artifactId>gradoop-common</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.gradoop</groupId>
             <artifactId>gradoop-flink</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
