[#694] Updated gdl dependency

--- a/gradoop-hbase/pom.xml
+++ b/gradoop-hbase/pom.xml
@@ -81,7 +81,7 @@
 
         <!-- Others -->
         <dependency>
-            <groupId>org.s1ck</groupId>
+            <groupId>com.github.s1ck</groupId>
             <artifactId>gdl</artifactId>
         </dependency>
 
