--- a/gradoop-common/pom.xml
+++ b/gradoop-common/pom.xml
@@ -56,7 +56,7 @@
 
         <!-- Others -->
         <dependency>
-            <groupId>org.s1ck</groupId>
+            <groupId>com.github.s1ck</groupId>
             <artifactId>gdl</artifactId>
         </dependency>
 
