--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
         <license.licenseName>apache_v2</license.licenseName>
 
         <dep.flink.version>1.3.1</dep.flink.version>
-        <dep.gdl.version>0.3.0-SNAPSHOT</dep.gdl.version>
+        <dep.gdl.version>0.3</dep.gdl.version>
         <dep.hbase.version>1.3.1</dep.hbase.version>
         <dep.javafastpfor.version>0.1.10</dep.javafastpfor.version>
         <dep.junit.version>4.11</dep.junit.version>
@@ -350,7 +350,7 @@
 
             <!-- Others -->
             <dependency>
-                <groupId>org.s1ck</groupId>
+                <groupId>com.github.s1ck</groupId>
                 <artifactId>gdl</artifactId>
                 <version>${dep.gdl.version}</version>
             </dependency>
