--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
         <license.licenseName>apache_v2</license.licenseName>
 
         <dep.flink.version>1.3.1</dep.flink.version>
-        <dep.gdl.version>0.3.0-SNAPSHOT</dep.gdl.version>
+        <dep.gdl.version>0.3</dep.gdl.version>
         <dep.hbase.version>1.3.1</dep.hbase.version>
         <dep.javafastpfor.version>0.1.10</dep.javafastpfor.version>
         <dep.junit.version>4.11</dep.junit.version>
@@ -124,31 +124,6 @@
         <plugin.maven-surefire.version>2.19.1</plugin.maven-surefire.version>
         <plugin.maven-shade.version>2.4.3</plugin.maven-shade.version>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>apache.snapshots</id>
-            <name>Apache Development Snapshot Repository</name>
-            <url>https://repository.apache.org/content/repositories/snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>dbleipzig</id>
-            <name>Database Group Leipzig University</name>
-            <url>https://wdiserv1.informatik.uni-leipzig.de:443/archiva/repository/dbleipzig/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 
     <build>
         <pluginManagement>
@@ -350,7 +325,7 @@
 
             <!-- Others -->
             <dependency>
-                <groupId>org.s1ck</groupId>
+                <groupId>com.github.s1ck</groupId>
                 <artifactId>gdl</artifactId>
                 <version>${dep.gdl.version}</version>
             </dependency>
