--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.gradoop</groupId>
         <artifactId>gradoop</artifactId>
-        <version>0.3.0-SNAPSHOT</version>
+        <version>0.3</version>
     </parent>
 
     <artifactId>gradoop-examples</artifactId>
@@ -61,6 +61,23 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <!-- deployment plugins -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
