--- a/gradoop-common/pom.xml
+++ b/gradoop-common/pom.xml
@@ -71,7 +71,7 @@
 
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
+            <artifactId>bson</artifactId>
         </dependency>
 
         <!-- Test dependencies -->
