--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
         <dep.jettison.version>1.3.7</dep.jettison.version>
         <dep.jsonassert.version>1.2.3</dep.jsonassert.version>
         <dep.log4j.version>1.2.17</dep.log4j.version>
-        <dep.mongodb.version>3.3.0</dep.mongodb.version>
+        <dep.bson.version>3.6.3</dep.bson.version>
 
         <log4j.properties>log4j-test.properties</log4j.properties>
 
@@ -351,8 +351,8 @@
 
             <dependency>
                 <groupId>org.mongodb</groupId>
-                <artifactId>mongo-java-driver</artifactId>
-                <version>${dep.mongodb.version}</version>
+                <artifactId>bson</artifactId>
+                <version>${dep.bson.version}</version>
             </dependency>
 
             <!-- Test dependencies -->
