--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,8 @@
 
         <license.licenseName>apache_v2</license.licenseName>
 
+        <!-- alpha order require -->
+        <dep.bson.version>3.6.3</dep.bson.version>
         <dep.flink.version>1.3.1</dep.flink.version>
         <dep.gdl.version>0.3</dep.gdl.version>
         <dep.hbase.version>1.3.1</dep.hbase.version>
@@ -112,7 +114,6 @@
         <dep.jettison.version>1.3.7</dep.jettison.version>
         <dep.jsonassert.version>1.2.3</dep.jsonassert.version>
         <dep.log4j.version>1.2.17</dep.log4j.version>
-        <dep.mongodb.version>3.3.0</dep.mongodb.version>
 
         <log4j.properties>log4j-test.properties</log4j.properties>
 
@@ -351,8 +352,8 @@
 
             <dependency>
                 <groupId>org.mongodb</groupId>
-                <artifactId>mongo-java-driver</artifactId>
-                <version>${dep.mongodb.version}</version>
+                <artifactId>bson</artifactId>
+                <version>${dep.bson.version}</version>
             </dependency>
 
             <!-- Test dependencies -->
