--- a/gradoop-common/pom.xml
+++ b/gradoop-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.gradoop</groupId>
         <artifactId>gradoop</artifactId>
-        <version>0.4-SNAPSHOT</version>
+        <version>0.3.1</version>
     </parent>
 
     <artifactId>gradoop-common</artifactId>
