--- a/gradoop-common/pom.xml
+++ b/gradoop-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.gradoop</groupId>
         <artifactId>gradoop</artifactId>
-        <version>0.3.0-SNAPSHOT</version>
+        <version>0.3.1</version>
     </parent>
 
     <artifactId>gradoop-common</artifactId>
@@ -39,6 +39,23 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <!-- deployment plugins -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
