--- a/gradoop-checkstyle/pom.xml
+++ b/gradoop-checkstyle/pom.xml
@@ -4,15 +4,40 @@
 
     <parent>
         <groupId>org.gradoop</groupId>
-        <artifactId>gradoop</artifactId>
-        <version>0.3.2-SNAPSHOT</version>
-        <relativePath>..</relativePath>
+        <artifactId>gradoop-parent</artifactId>
+        <version>0.3.2</version>
     </parent>
 
     <artifactId>gradoop-checkstyle</artifactId>
 
     <name>Gradoop Checkstyle</name>
     <description>Checkstyle settings for Gradoop</description>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
