--- a/gradoop-hbase/pom.xml
+++ b/gradoop-hbase/pom.xml
@@ -4,8 +4,8 @@
 
     <parent>
         <groupId>org.gradoop</groupId>
-        <artifactId>gradoop</artifactId>
-        <version>0.3.2-SNAPSHOT</version>
+        <artifactId>gradoop-parent</artifactId>
+        <version>0.3.2</version>
     </parent>
 
     <artifactId>gradoop-hbase</artifactId>
@@ -17,6 +17,32 @@
     <properties>
         <hbaseSuite>**/HBaseTestSuite.class</hbaseSuite>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
