fix spelling mistake of test suite name

--- a/gradoop-accumulo/pom.xml
+++ b/gradoop-accumulo/pom.xml
@@ -13,7 +13,7 @@
     <name>Gradoop Accumulo</name>
 
     <properties>
-        <accumuloTestSuite>**/AccumuloTestSuit.class</accumuloTestSuite>
+        <accumuloTestSuite>**/AccumuloTestSuite.class</accumuloTestSuite>
     </properties>
 
     <build>
