--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -79,7 +79,7 @@
                                     <include>org.codehaus.jettison:jettison</include>
                                     <include>com.google.guava:guava</include>
                                     <include>org.antlr:antlr4-runtime</include>
-                                    <include>org.mongodb:mongo-java-driver</include>
+                                    <include>org.mongodb:bson</include>
                                     <include>commons-cli:*</include>
                                     <include>me.lemire.integercompression:*</include>
                                 </includes>
