--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
   - $HOME/.m2
 
 before_cache:
-  - rm -rf $HOME/.m2/repository/
+  - rm -rf $HOME/.m2/repository/org/gradoop/
 
 language: java
 
