--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
         <dep.jsonassert.version>1.2.3</dep.jsonassert.version>
         <dep.kryo.version>4.0.2</dep.kryo.version>
         <dep.log4j.version>1.2.17</dep.log4j.version>
+        <dep.mongo.version>3.7.1</dep.mongo.version>
 
         <log4j.properties>log4j-test.properties</log4j.properties>
 
@@ -474,6 +475,13 @@
                 <version>${dep.hbase.version}</version>
             </dependency>
 
+            <!-- Mongo -->
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongodb-driver-sync</artifactId>
+                <version>${dep.mongo.version}</version>
+            </dependency>
+
             <!-- Kryo -->
             <dependency>
                 <groupId>com.esotericsoftware</groupId>
@@ -535,6 +543,14 @@
             <dependency>
                 <groupId>org.gradoop</groupId>
                 <artifactId>gradoop-examples</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.gradoop</groupId>
+                <artifactId>gradoop-store-api</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
