--- a/gradoop-store/gradoop-accumulo/pom.xml
+++ b/gradoop-store/gradoop-accumulo/pom.xml
@@ -17,6 +17,32 @@
         <accumuloTestSuite>**/AccumuloTestSuite.class</accumuloTestSuite>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
@@ -39,8 +65,11 @@
                     <headerLocation>gradoop/LICENSE.txt</headerLocation>
                     <includeResources>false</includeResources>
                     <includeTestResources>false</includeTestResources>
-                    <suppressionsLocation>gradoop/checkstyle-suppressions.xml</suppressionsLocation>
-                    <suppressionsFileExpression>checkstyle.suppressions.file
+                    <suppressionsLocation>
+                        gradoop/checkstyle-suppressions.xml
+                    </suppressionsLocation>
+                    <suppressionsFileExpression>
+                        checkstyle.suppressions.file
                     </suppressionsFileExpression>
                     <failsOnError>true</failsOnError>
                     <consoleOutput>true</consoleOutput>
@@ -82,8 +111,9 @@
                             <outputDirectory>target/iterator</outputDirectory>
                             <artifactSet>
                                 <includes>
-                                    <include>org.gradoop:*</include>
-                                    <include>com.esotericsoftware:kryo-shaded</include>
+                                    <include>org.gradoop:gradoop-common</include>
+                                    <include>org.gradoop:gradoop-store-api</include>
+                                    <!--<include>com.esotericsoftware:kryo-shaded</include>-->
                                     <include>com.esotericsoftware.minlog:*</include>
                                     <include>com.esotericsoftware.kryo:*</include>
                                     <include>org.apache.flink:flink-core</include>
