--- a/gradoop-store/gradoop-hbase/pom.xml
+++ b/gradoop-store/gradoop-hbase/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>gradoop-store</artifactId>
         <groupId>org.gradoop</groupId>
-        <version>0.3.3-SNAPSHOT</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>gradoop-hbase</artifactId>
